# kuka_kr6

./: README.md
kuka_description/: CMakeLists.txt  package.xml
kuka_description/config/: config.rviz
kuka_description/launch/: display.launch
kuka_description/meshes/collision/: link_3.stl
kuka_description/meshes/visual/: base_link.stl  link_2.stl  link_3.stl
kuka_description/robots/: kuka_kr6.urdf.xacro  lhd.urdf
kuka_description/scripts/: update_models.sh
kuka_description/urdf/: kuka_kr6.xacro  materials.urdf
kuka_driver/: CMakeLists.txt  package.xml  setup.py
kuka_driver/include/kuka_driver/: kuka_commander.h  kukalib.h
kuka_driver/include/kuka_driver/kuka_api/: kuka_api.h
kuka_driver/launch/: kuka_driver.launch
kuka_driver/scripts/: example1.py  follow_shadow.py  go_home.py  green_path_go.py  gripper.py  lights_off.py  lights_on.py  open_door.py  red_path_go.py
kuka_driver/src/: kuka_commander.cpp  kuka_driver.cpp  kukalib.cpp
kuka_driver/src/kuka_api/: CMakeLists.txt  Makefile  README  kuka.h  kuka.x  kuka_api.c  kuka_clnt.c  kuka_xdr.c
kuka_driver/src/kuka_driver/: kuka_commander.py
kuka_driver/srv/: Home.srv  PTP.srv  SetVelocity.srv  Stop.srv
kuka_interface/: CMakeLists.txt  package.xml  setup.py
kuka_interface/config/: shadow_interface.rviz
kuka_interface/launch/: shadow.launch
kuka_interface/scripts/: interactive.py
kuka_interface/src/kuka_interface/: commander.py  kinematics.py  kuka_kinematics.py  marker.py
kuka_kr6/: CMakeLists.txt  package.xml
kuka_kr6_description/: CMakeLists.txt  package.xml
kuka_kr6_description/config/: config.rviz
kuka_kr6_description/launch/: display.launch
kuka_kr6_description/meshes/collision/: base_link.stl  link_1.stl  link_2.stl  link_4.stl  link_6.stl
kuka_kr6_description/meshes/visual/: link_1.stl  link_4.stl  link_6.stl
kuka_kr6_description/robots/: kuka_kr6.sdf  kuka_kr6.urdf  kuka_kr6.urdf.xacro
kuka_kr6_description/scripts/: update_models.sh
kuka_kr6_description/urdf/: calibration.xacro  common.xacro  gazebo.xacro  kuka_kr6.xacro
kuka_kr6_moveit_config/: .setup_assistant  package.xml
kuka_kr6_moveit_config/config/: joint_limits.yaml  kuka_kr6.srdf  ompl_planning.yaml
kuka_kr6_moveit_config/launch/: planning_context.launch
kuka_model/: CMakeLists.txt  README.md  contributors.txt  package.xml
kuka_model/config/: kinect-phantom-online.rviz  kuka-control-gazebo.rviz  kuka-control.rviz  kuka-ik-demo.rviz  kuka-kinect-config.rviz  kuka-shadow-ik.rviz  kuka-shadow-ik_normal.rviz  kuka-shadow.rviz  kuka-view.rviz  marker.rviz
kuka_model/launch/: kinect.launch  kinect_frames.launch  kinect_phantom_online.launch  kuka-bag.launch  kuka-demo.launch  kuka-ik-demo.launch  kuka-ik-marker.launch  kuka-ik-phantom-foto.launch  kuka-ik-phantom.launch  kuka-joint-marker.launch  kuka-octo.launch  kuka-phantom-normal.launch  kuka-phantom-pcl-online.launch  kuka-shadow-ph.launch  kuka-shadow-real.launch  kuka-shadow.launch  kuka-view.launch  kuka_kinect.launch  marker.launch
kuka_model/meshes/collision/: link_5.stl
kuka_model/meshes/tool/collision/: kinect_gripper.stl
kuka_model/meshes/tool/visual/: kinect_gripper.stl
kuka_model/meshes/visual/: link_5.stl
kuka_model/src/: kuka_ik_demo.cpp  kuka_ik_demo2.cpp  kuka_ik_marker.cpp  kuka_ik_perpendicular.cpp  kuka_joint_marker.cpp  kuka_tf.cpp  kuka_tf.cpp.back
kuka_model/urdf/: kinect_gripper.xacro  kuka-kinect-model.urdf  kuka-model-bodkin-limited.xacro  kuka-model-bodkin-real.urdf  kuka-model-bodkin-shadow-limited.urdf  kuka-model-bodkin-shadow.urdf  kuka-model-bodkin.xacro  kuka-model-gazebo-bodkin.urdf  kuka-model-gazebo.urdf  kuka-model.urdf  kuka-model.xacro  kuka-shadow-model.urdf  kuka_model.gazebo  kuka_model.xacro  kuka_model_bodkin_real.urdf  kuka_model_bodkin_real.xacro  kuka_model_gazebo_simple.urdf
