<?xml version="1.0"?>
<package>
  <name>kuka_interface</name>
  <version>0.0.0</version>
  <description>The kuka_interface package</description>

  <maintainer email="rmunozriffo@ing.uchile.cl">Rodrigo Muñoz</maintainer>
  <author email="rmunozriffo@ing.uchile.cl">Rodrigo Muñoz</author>

  <url type="website">https://github.com/rorromr/kuka_kr6/</url>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- <run_depend>urdfdom</run_depend> -->
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>tf</run_depend>
  
</package>