<?xml version="1.0"?>
<package>
  <name>kuka_kr6_description</name>
  <version>0.1.0</version>
  <description>This package contains KUKA KR6 URDF files.</description>

  <maintainer email="rmunozriffo@ing.uchile.cl">Rodrigo Munoz</maintainer>
  <author email="rmunozriffo@ing.uchile.cl">Rodrigo Munoz</author>

  <url type="website">https://github.com/rorromr/kuka_kr6/</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>

</package>